fixed link to content center

--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -22,7 +22,7 @@ nav.navbar.navbar-default
             li
               a(href="/pro") Trademate Pro
         li
-          a(href='#') Content center
+          a(href='http://blog.tradematesports.com', target='_blank') Content center
       ul.nav.navbar-nav.navbar-right
         li
           a.bordered(href='https://app.tradematesports.com/login') Log in
